--- a/src/Germadent.Rms.App/Views/OrderSummaryWindow.xaml
+++ b/src/Germadent.Rms.App/Views/OrderSummaryWindow.xaml
@@ -97,7 +97,7 @@
                 <TextBlock Text="Работы к выполнению" FontSize="14" FontWeight="SemiBold"/>
                 <DataGrid Grid.Row="1" Margin="0,6,0,0"
                           AlternationCount="2"
-                          ItemsSource="{Binding Operations}">
+                          ItemsSource="{Binding Works}">
                     <DataGrid.Columns>
                         <DataGridCheckBoxColumn Binding="{Binding IsChecked, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                 IsReadOnly="False">
