--- a/src/Germadent.Rms.App/Views/MainWindow.xaml
+++ b/src/Germadent.Rms.App/Views/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:helpers="clr-namespace:Germadent.UI.Helpers;assembly=Germadent.UI"
         xmlns:viewModels="clr-namespace:Germadent.Client.Common.ViewModels;assembly=Germadent.Client.Common"
         xmlns:controls="clr-namespace:Germadent.UI.Controls;assembly=Germadent.UI"
+        xmlns:designMock="clr-namespace:Germadent.Rms.App.Views.DesignMock"
         mc:Ignorable="d"
         Title="{Binding Title}" 
         MinWidth="1024"
@@ -15,6 +16,7 @@
         WindowStartupLocation="CenterScreen"
         Background="{x:Static SystemColors.ControlBrush}"
         DataContextChanged="MainWindow_OnDataContextChanged"
+        d:DataContext="{d:DesignInstance Type=designMock:DesignMockMainViewModel, IsDesignTimeCreatable=True}"
         FocusManager.FocusedElement="{Binding ElementName=SearchComboBox}">
     <Grid Margin="12">
         <Grid.RowDefinitions>
@@ -34,15 +36,12 @@
 
             <TextBlock Text="Работа с заказ-нарядами" VerticalAlignment="Center" Margin="0,24,0,0" FontSize="10"/>
 
-            <Button Content="Открыть З-Н" Margin="0,6,0,0"
-                    Command="{Binding OpenOrderCommand}"/>
-
-            <!--<Button Content="Список работ по З-Н" Margin="0,6,0,0"
-                    Command="{Binding WorkListCommand}"/>-->
-
+            <Button Content="Взять в работу З-Н" Margin="0,6,0,0"
+                    Command="{Binding BeginWorkByWorkOrderCommand}"/>
+            <Button Content="Закончить работы по З-Н" Margin="0,6,0,0"
+                    Command="{Binding FinishWorkByWorkOrderCommand}"/>
             <Button Content="Распечатать З-Н" Margin="0,6,0,0"
                     Command="{Binding PrintOrderCommand}"/>
-
             <Button Content="Настроить фильтр" Margin="0,6,0,0"
                     Command="{Binding FilterOrdersCommand}"/>
         </StackPanel>
@@ -65,7 +64,7 @@
                   SelectedItem="{Binding SelectedOrder}"
                   SelectionChanged="OrdersGrid_OnSelectionChanged">
             <DataGrid.InputBindings>
-                <KeyBinding Command="{Binding OpenOrderCommand}"
+                <KeyBinding Command="{Binding BeginWorkByWorkOrderCommand}"
                             Key="Enter"/>
                 <KeyBinding Command="{Binding PrintOrderCommand}"
                             Key="P" Modifiers="Control"/>
@@ -78,9 +77,14 @@
                     <Setter Property="ContextMenu">
                         <Setter.Value>
                             <ContextMenu DataContext="{Binding RelativeSource={RelativeSource Mode=Self}, Path=PlacementTarget.Tag}">
-                                <MenuItem Header="Открыть" FontWeight="Bold" Command="{Binding OpenOrderCommand}"
+                                <MenuItem Header="Взять в работу" FontWeight="Bold" 
+                                          Command="{Binding BeginWorkByWorkOrderCommand}"
                                           InputGestureText="Enter"/>
-                                <MenuItem Header="Распечатать" Command="{Binding PrintOrderCommand}"
+                                <MenuItem Header="Закончить работы"
+                                          Command="{Binding FinishWorkByWorkOrderCommand}"/>
+                                <Separator/>
+                                <MenuItem Header="Распечатать" 
+                                          Command="{Binding PrintOrderCommand}"
                                           InputGestureText="Ctrl+P"/>
                             </ContextMenu>
                         </Setter.Value>
