--- a/src/Germadent.Rms.App/Views/StartWorksWindow.xaml
+++ b/src/Germadent.Rms.App/Views/StartWorksWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Germadent.Rms.App.Views.OrderSummaryWindow"
+﻿<Window x:Class="Germadent.Rms.App.Views.StartWorksWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -17,7 +17,7 @@
         ShowInTaskbar="False"
         WindowStartupLocation="CenterOwner"
         Background="{x:Static SystemColors.ControlBrush}"
-        d:DataContext="{d:DesignInstance Type=designMock:DesignMockOrderSummaryViewModel, IsDesignTimeCreatable=True}">
+        d:DataContext="{d:DesignInstance Type=designMock:DesignMockStartWorkListViewModelViewModel, IsDesignTimeCreatable=True}">
     <Grid Margin="12">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -134,7 +134,8 @@
         <Separator Grid.Row="1" Margin="-12,12,-12,12"/>
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" >
-            <Button Content="Взять в работу" Width="100" helpers:WindowCloseHelper.DialogResult="True"
+            <Button Content="Взять в работу" Width="100" 
+                    helpers:WindowCloseHelper.DialogResult="True"
                     Command="{Binding OkCommand}"
                     IsDefault="True"/>
             <Button Content="Отмена" Width="100" Margin="6,0,0,0" helpers:WindowCloseHelper.DialogResult="False"
