--- a/src/Germadent.UI/Theme/Converters.xaml
+++ b/src/Germadent.UI/Theme/Converters.xaml
@@ -10,4 +10,6 @@
     <converters:EnumToVisibilityConverter x:Key="EnumToVisibilityConverter"/>
     <converters:EnumToInvisibilityConverter x:Key="EnumToInvisibilityConverter"/>
     <converters:InvertBoolConverter x:Key="InvertBoolConverter"/>
+    <converters:ColorConverter x:Key="ColorConverter"/>
+    <converters:ReadableColorConverter x:Key="ReadableColorConverter"/>
 </ResourceDictionary>
