--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
@@ -227,7 +227,7 @@
                                             <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.InProgress}">
                                                 <Setter Property="Background" Value="ForestGreen"/>
                                             </DataTrigger>
-                                            <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.Control}">
+                                            <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.QualityControl}">
                                                 <Setter Property="Background" Value="Yellow"/>
                                             </DataTrigger>
                                             <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.Realization}">
@@ -243,7 +243,7 @@
                                                 <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.InProgress}">
                                                     <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Border}, Path=Background, Converter={StaticResource ReadableColorConverter}}"/>
                                                 </DataTrigger>
-                                                <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.Control}">
+                                                <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.QualityControl}">
                                                     <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Border}, Path=Background, Converter={StaticResource ReadableColorConverter}}"/>
                                                 </DataTrigger>
                                                 <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.Realization}">
