--- a/src/Germadent.Rms.App/Views/MainWindow.xaml
+++ b/src/Germadent.Rms.App/Views/MainWindow.xaml
@@ -14,7 +14,7 @@
         Width="1200"
         MinHeight="600"
         Height="900"
-        WindowStartupLocation="CenterScreen"
+        WindowStartupLocation="CenterScreen" 
         Background="{x:Static SystemColors.ControlBrush}"
         DataContextChanged="MainWindow_OnDataContextChanged"
         d:DataContext="{d:DesignInstance Type=designMock:DesignMockMainViewModel, IsDesignTimeCreatable=True}"
@@ -136,7 +136,7 @@
                                             <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.InProgress}">
                                                 <Setter Property="Background" Value="ForestGreen"/>
                                             </DataTrigger>
-                                            <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.Control}">
+                                            <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.QualityControl}">
                                                 <Setter Property="Background" Value="Yellow"/>
                                             </DataTrigger>
                                             <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.Realization}">
@@ -152,7 +152,7 @@
                                                 <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.InProgress}">
                                                     <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Border}, Path=Background, Converter={StaticResource ReadableColorConverter}}"/>
                                                 </DataTrigger>
-                                                <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.Control}">
+                                                <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.QualityControl}">
                                                     <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Border}, Path=Background, Converter={StaticResource ReadableColorConverter}}"/>
                                                 </DataTrigger>
                                                 <DataTrigger Binding="{Binding  Status}" Value="{x:Static model:OrderStatus.Realization}">
