--- a/src/Germadent.Client.Common/Theme/GermadentStyles.xaml
+++ b/src/Germadent.Client.Common/Theme/GermadentStyles.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:converters="clr-namespace:Germadent.Client.Common.Converters"
-                    xmlns:helpers="clr-namespace:Germadent.UI.Helpers;assembly=Germadent.UI">
+                    xmlns:helpers="clr-namespace:Germadent.UI.Helpers;assembly=Germadent.UI"
+                    xmlns:controls="clr-namespace:Germadent.UI.Controls;assembly=Germadent.UI">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/Germadent.UI;component/Theme/ButtonDictionary.xaml"/>
@@ -39,6 +40,12 @@
         </Style.Triggers>
     </Style>
 
+    <Style TargetType="{x:Type controls:BusyIndicator}">
+        <Setter Property="Width" Value="48"/>
+        <Setter Property="Height" Value="48"/>
+        <Setter Property="Fill" Value="Gray"/>
+    </Style>
+
     <Style x:Key="InfoTextBorderStyle" TargetType="{x:Type Border}">
         <Setter Property="CornerRadius" Value="2"/>
         <Setter Property="Margin" Value="-3"/>
@@ -54,4 +61,6 @@
         <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
         <Setter Property="helpers:TextBlockToolTipHelper.ShowTooltipWhenTrimming" Value="True"/>
     </Style>
+
+
 </ResourceDictionary>
