--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Pricing/PriceListEditorWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Pricing/PriceListEditorWindow.xaml
@@ -44,8 +44,7 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
-            <controls:BusyIndicator Grid.Column="0" IsBusy="{Binding IsBusy, Delay=200, IsAsync=True}" Fill="Gray"
-                                    Width="24" Height="24" Margin="-6"/>
+            <controls:BusyIndicator Grid.Column="0" IsBusy="{Binding IsBusy, Delay=200, IsAsync=True}" Margin="-6"/>
 
             <TextBlock Grid.Column="1" Text="{Binding BusyReason, Delay=200, IsAsync=True}" Margin="12,0,0,0"
                        VerticalAlignment="Center"/>
