--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/SalaryCalculationWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/SalaryCalculationWindow.xaml
@@ -12,10 +12,10 @@
         ShowInTaskbar="False"
         Background="{x:Static SystemColors.ControlBrush}"
         Title="Расчет заработной платы" 
-        MinHeight="450"
-        Height="450" 
-        MinWidth="900"
-        Width="900"
+        MinHeight="600"
+        Height="900" 
+        MinWidth="1000"
+        Width="1200"
         d:DataContext="{d:DesignInstance Type={x:Type designMock:DesignMockSalaryCalculationViewModel}, IsDesignTimeCreatable=True}">
     <Grid Margin="12">
         <Grid.RowDefinitions>
@@ -91,19 +91,19 @@
                     </GroupStyle>
                 </DataGrid.GroupStyle>
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Work ID" Width="Auto"
-                                        ElementStyle="{StaticResource DataGridTextBlockStyle}"
-                                        Binding="{Binding WorkId}"/>
-
-                    <DataGridTextColumn Header="Order ID" Width="Auto"
-                                        ElementStyle="{StaticResource DataGridTextBlockStyle}"
-                                        Binding="{Binding WorkOrderId}"/>
-
                     <DataGridTextColumn Header="Код" Width="Auto"
                                         ElementStyle="{StaticResource DataGridTextBlockStyle}"
                                         Binding="{Binding TechnologyOperationUserCode}"/>
 
-                    <DataGridTextColumn Header="Технологическая операция" Width="*"
+                    <DataGridTextColumn Header="Заказчик" Width="Auto"
+                                        ElementStyle="{StaticResource DataGridTextBlockStyle}"
+                                        Binding="{Binding CustomerName}"/>
+
+                    <DataGridTextColumn Header="Пациент" Width="Auto"
+                                        ElementStyle="{StaticResource DataGridTextBlockStyle}"
+                                        Binding="{Binding PatientFullName}"/>
+
+                    <DataGridTextColumn Header="Технологическая операция" Width="300" MinWidth="150" MaxWidth="500"
                                         ElementStyle="{StaticResource DataGridTextBlockStyle}"
                                         Binding="{Binding TechnologyOperationName}"/>
 
@@ -134,6 +134,14 @@
                    
                 </DataGrid.Columns>
             </DataGrid>
+
+            <!--<DataGrid>
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="test1" Width="Auto"/>
+                    <DataGridTextColumn Header="test2" Width="*"/>
+                    <DataGridTextColumn Header="test3" Width="Auto"/>
+                </DataGrid.Columns>
+            </DataGrid>-->
 
             <TextBlock Grid.Row="1" HorizontalAlignment="Right" FontSize="14" Margin="0,6,0,0">
                 <Run Text="Итого:"/>
