--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/SalaryCalculationWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/SalaryCalculationWindow.xaml
@@ -79,7 +79,8 @@
                                                     <RowDefinition Height="*"/>
                                                 </Grid.RowDefinitions>
 
-                                                <TextBlock Grid.Row="0" Text="{Binding Name}" Margin="6,6,0,0" FontSize="14" FontWeight="SemiBold"/>
+                                                <TextBlock Grid.Row="0" Text="{Binding Name}" Margin="6,6,0,0" FontSize="14" FontWeight="SemiBold"
+                                                           HorizontalAlignment="Left" Background="White"/>
 
                                                 <ItemsPresenter Grid.Row="1" Margin="0,6,0,12"/>
                                             </Grid>
@@ -109,11 +110,11 @@
 
                     <DataGridTextColumn Header="Начата" Width="Auto"
                                         ElementStyle="{StaticResource DataGridTextBlockStyle}"
-                                        Binding="{Binding WorkStarted, StringFormat='dd MMMM yyyy HH:mm:ss', ConverterCulture='ru-RU'}"/>
+                                        Binding="{Binding WorkStarted, StringFormat='dd.MM.yyyy HH:mm:ss', ConverterCulture='ru-RU'}"/>
 
                     <DataGridTextColumn Header="Закончена" Width="Auto"
                                         ElementStyle="{StaticResource DataGridTextBlockStyle}"
-                                        Binding="{Binding WorkCompleted, StringFormat='dd MMMM yyyy HH:mm:ss', ConverterCulture='ru-RU'}"/>
+                                        Binding="{Binding WorkCompleted, StringFormat='dd.MM.yyyy HH:mm:ss', ConverterCulture='ru-RU'}"/>
 
                     <DataGridTextColumn Header="Цена" Width="Auto"
                                         ElementStyle="{StaticResource DataGridTextBlockStyle}"
@@ -134,14 +135,6 @@
                    
                 </DataGrid.Columns>
             </DataGrid>
-
-            <!--<DataGrid>
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="test1" Width="Auto"/>
-                    <DataGridTextColumn Header="test2" Width="*"/>
-                    <DataGridTextColumn Header="test3" Width="Auto"/>
-                </DataGrid.Columns>
-            </DataGrid>-->
 
             <TextBlock Grid.Row="1" HorizontalAlignment="Right" FontSize="14" Margin="0,6,0,0">
                 <Run Text="Итого:"/>
