--- a/src/Germadent.UserManagementCenter.App/Views/AddRoleWindow.xaml
+++ b/src/Germadent.UserManagementCenter.App/Views/AddRoleWindow.xaml
@@ -69,9 +69,21 @@
             </ListBox.GroupStyle>
             <ListBox.ItemTemplate>
                 <DataTemplate DataType="{x:Type viewModels:RightViewModel}">
-                    <CheckBox Content="{Binding RightDescription}"
-                              IsEnabled="{Binding IsObsolete, Converter={StaticResource InvertBoolConverter}}"
-                              IsChecked="{Binding IsChecked}"/>
+                    <Grid Background="Transparent">
+                        <Grid.Style>
+                            <Style TargetType="Grid">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsObsolete}" Value="True">
+                                        <Setter Property="ToolTip" Value="Данное право является устаревшим"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Grid.Style>
+
+                        <CheckBox Content="{Binding RightDescription}"
+                                  IsEnabled="{Binding IsObsolete, Converter={StaticResource InvertBoolConverter}}"
+                                  IsChecked="{Binding IsChecked}"/>
+                    </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
