Рефакторинг месседж боксов

--- a/src/Germadent.UI/Theme/Converters.xaml
+++ b/src/Germadent.UI/Theme/Converters.xaml
@@ -12,4 +12,5 @@
     <converters:InvertBoolConverter x:Key="InvertBoolConverter"/>
     <converters:ColorConverter x:Key="ColorConverter"/>
     <converters:ReadableColorConverter x:Key="ReadableColorConverter"/>
+    <converters:SystemIconConverter x:Key="SystemIconConverter"/>
 </ResourceDictionary>
