--- a/src/Germadent.UI/Windows/InputBoxWindow.xaml
+++ b/src/Germadent.UI/Windows/InputBoxWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Germadent.UI.Windows.InputBox"
+﻿<Window x:Class="Germadent.UI.Windows.InputBoxWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,8 @@
         xmlns:designTime="clr-namespace:Germadent.UI.ViewModels.DesignTime"
         xmlns:helpers="clr-namespace:Germadent.UI.Helpers"
         mc:Ignorable="d"
-        Title="{Binding Title}" Width="500"
+        Title="{Binding Title}"
+        Width="500"
         SizeToContent="Height"
         WindowStartupLocation="CenterOwner"
         ShowInTaskbar="False"
