--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/LabInfoStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/LabInfoStepUserControl.xaml
@@ -40,6 +40,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Border Grid.Row="0" Grid.Column="0" Style="{StaticResource InfoTextBorderStyle}">
@@ -136,17 +137,24 @@
         <TextBlock Grid.Row="10" Grid.Column="0" Text="Цена"/>
         <StackPanel Grid.Row="10" Grid.Column="1" Orientation="Horizontal" Margin="6,6,0,0">
             <RadioButton Content="Premium" Margin="0,0,0,0"
-                         IsChecked="{Binding Stl, Converter={StaticResource InvertBoolConverter}}"/>
-            <RadioButton Content="Standard"  Margin="12,0,0,0"
                          IsChecked="{Binding Stl}"/>
+            <RadioButton Content="Standard"  Margin="12,0,0,0"
+                         IsChecked="{Binding Stl, Converter={StaticResource InvertBoolConverter}}"/>
         </StackPanel>
 
         <TextBlock Grid.Row="11" Grid.Column="0" Text="Тип расчета"/>
         <StackPanel Grid.Row="11" Grid.Column="1" Orientation="Horizontal" Margin="6,6,0,0">
             <RadioButton Content="Наличный"
-                         IsChecked="{Binding Cashless, Converter={StaticResource InvertBoolConverter}}"/>
-            <RadioButton Content="Безналичный" Margin="12,0,0,0"
                          IsChecked="{Binding Cashless}"/>
+            <RadioButton Content="Безналичный" Margin="12,0,0,0"
+                         IsChecked="{Binding Cashless, Converter={StaticResource InvertBoolConverter}}"/>
+        </StackPanel>
+        <TextBlock Grid.Row="12" Grid.Column="0" Text="Коэффициент срочности"/>
+        <StackPanel Grid.Row="12" Grid.Column="1" Orientation="Horizontal" Margin="6,6,0,0">
+            <RadioButton Content="1"
+                         IsChecked="{Binding UrgencyRatio}"/>
+            <RadioButton Content="1,3" Margin="12,0,0,0"
+                         IsChecked="{Binding UrgencyRatio}"/>
         </StackPanel>
 
     </Grid>
