--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterInfoStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterInfoStepUserControl.xaml
@@ -137,12 +137,14 @@
             <RadioButton Content="Безналичный" Margin="12,0,0,0"
                          IsChecked="{Binding Cashless}"/>
         </StackPanel>
-        <TextBlock Grid.Row="10" Grid.Column="0" Text="Коэффициент срочности"/>
+        <TextBlock Grid.Row="10" Grid.Column="0" Text="Срочность"/>
         <StackPanel Grid.Row="10" Grid.Column="1" Orientation="Horizontal" Margin="6,6,0,0">
-            <RadioButton Content="1"
-                         IsChecked="{Binding UrgencyRatio}"/>
-            <RadioButton Content="1,3" Margin="12,0,0,0"
-                         IsChecked="{Binding UrgencyRatio}"/>
+            <RadioButton Content="Обычная (1,0)"
+                         GroupName="urgencyRatio"
+                         IsChecked="{Binding IsNormalUrgencyRatio}"/>
+            <RadioButton Content="Повышенная (1,3)" Margin="6,0,0,0"
+                         GroupName="urgencyRatio"
+                         IsChecked="{Binding IsHighUrgencyRatio}"/>
         </StackPanel>
     </Grid>
 </UserControl>
