--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
@@ -98,6 +98,9 @@
                 <MenuItem Header="Прайслисты"
                           Visibility="{Binding CanViewPriceList, Converter={StaticResource BoolToVisibilityConverter}}"
                           Command="{Binding ShowPriceListEditorCommand}"/>
+                <MenuItem Header="Технологические операции"
+                          Visibility="{Binding CanViewTechnologyOperations, Converter={StaticResource BoolToVisibilityConverter}}"
+                          Command="{Binding ShowTechnologyOperationsEditorCommand}"/>
             </MenuItem>
         </Menu>
 
